- Remove all build files for now to start fresh.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "mb-portfolio",
-  "homepage": "https://maxbranvall.github.io/mb-portfolio.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,9 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +47,5 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
